fixes, cleaned code, added clear on read feature

--- a/generation/test_example_1.yml
+++ b/generation/test_example_1.yml
@@ -9,7 +9,7 @@ Component:
             Documentation: Text hier
             Option:
                 read: True
-                write: True
+                write: False
                 clear_on_read: True
             Bits:
                 IRQ1: 0
