--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
   - 2.5
 install:
   - pip install xmlrunner coverage
-script: coverage run tests/manage.py
+script: coverage run tests/tests.py
