--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
 python:
   - 2.7
+before_install:
+  - pip install coveralls
 install:
   - pip install xmlrunner coverage
 script:
   - cd tests
   - coverage run tests.py
+after_success:
+    - coveralls
