--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 before_install:
   - pip install coveralls
 install:
-  - pip install xmlrunner coverage
+  - pip install xmlrunner coverage pyyaml
 script:
   - cd tests
   - coverage run tests.py
