--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.links.issue=https://github.com/crafti5/pyVARED/issues
 sonar.links.ci=https://travis-ci.org/crafti5/pyVARED
 sonar.links.homepage=https://github.com/crafti5/pyVARED
 sonar.projectDescription=pyVARED - Python VHDL Automatic Register Extract Definition
-sonar.language=python
+sonar.language=py
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
