--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectKey=pyVARED
 sonar.projectName=pyVARED
 sonar.projectVersion=v1.0.0
 sonar.sources=.
-sonar.coverageReportPaths=./tests/coverage.xml
+sonar.python.coverage.reportPath=./tests/coverage.xml
 sonar.testExecutionReportPaths=./tests/coverage/test_results.xml
 sonar.links.issue=https://github.com/crafti5/pyVARED/issues
 sonar.links.ci=https://travis-ci.org/crafti5/pyVARED
