--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,9 +3,9 @@ sonar.projectKey=pyVARED
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=pyVARED
 sonar.projectVersion=v1.0.0
-sonar.sources=.
-sonar.python.coverage.reportPath=./tests/coverage.xml
+sonar.sources=**/*.py
 sonar.testExecutionReportPaths=./tests/coverage/test_results.xml
+sonar.python.coverage.reportPath=./tests/coverage.xml
 sonar.links.issue=https://github.com/crafti5/pyVARED/issues
 sonar.links.ci=https://travis-ci.org/crafti5/pyVARED
 sonar.links.homepage=https://github.com/crafti5/pyVARED
