--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,13 +4,13 @@ sonar.projectKey=pyVARED
 sonar.projectName=pyVARED
 sonar.projectVersion=v1.0.0
 sonar.sources=.
-sonar.testExecutionReportPaths=./tests/coverage/test-results.xml
 sonar.links.issue=https://github.com/crafti5/pyVARED/issues
 sonar.links.ci=https://travis-ci.org/crafti5/pyVARED
 sonar.links.homepage=https://github.com/crafti5/pyVARED
 sonar.projectDescription=pyVARED - Python VHDL Automatic Register Extract Definition
 sonar.language=py
 sonar.python.coverage.reportPath=./tests/coverage.xml
+sonar.python.coverage.itReportPath=./tests/coverage/test-results.xml
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
