try to fix coverall

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,7 @@ script:
   - coverage xml -i
   - cd ..
   - sonar-scanner
+  - cd tests
+  - coverage run --branch --source=../ tests.py
 after_success:
     - coveralls
